Debezium bootstrapping agreement, 2024-10-30
Signed-off-by: Chris Cranford <chris@hibernate.org>

--- a/CONTACTS.yaml
+++ b/CONTACTS.yaml
@@ -67,6 +67,8 @@ egc:
     login: dandreadis
   - project: slatedb
     login: criccomini
+  - project: debezium
+    login: naros
 
 #--------------------------------------------------------------------------
 # Advisory Board members (sponsor-appointed)
