--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -63,6 +63,7 @@ jobs:
           GIT_COMMIT: ${{ github.sha }}
           GH_TOKEN: ${{ github.token }}
           IS_PR: ${{ github.event_name == 'pull_request' }}
+          PR_URL: ${{ github.event.pull_request.html_url }}
         run: ./.github/docker-build-pdf.sh
 
       - uses: actions/upload-artifact@v4
