Infinispan bootstrapping agreement, 2024-11-18
Signed-off-by: Tristan Tarrant <ttarrant@redhat.com>

--- a/CONTACTS.yaml
+++ b/CONTACTS.yaml
@@ -67,6 +67,8 @@ egc:
     login: criccomini
   - project: debezium
     login: Naros
+  - project: infinispan
+    login: tristantarrant
 
 #--------------------------------------------------------------------------
 # EGC Backup/Secondary representative (appointed by project governance process)
