🐛 Fix attribution links

--- a/agreements/membership/members.yaml
+++ b/agreements/membership/members.yaml
@@ -97,7 +97,7 @@ attestations:
       I have read the following sections of the Commonhaus Foundation Bylaws:
       - [CF Council](https://www.commonhaus.org/bylaws/cf-council.html)
       - [Decision Making](https://www.commonhaus.org/bylaws/decision-making.html)
-      - [Voting](https://www.commonhaus.org/bylaws/cf-council.md#voting)
+      - [Voting](https://www.commonhaus.org/bylaws/cf-council.html#voting)
       - [Electronic Participation and Voting](https://www.commonhaus.org/bylaws/cf-council.html#electronic-participation-and-decision-making)
 
       I have read [Handling Reports and Escalations](https://www.commonhaus.org/policies/code-of-conduct/#handling-reports-and-escalations) in our Code of Conduct.
@@ -111,10 +111,10 @@ attestations:
     title: "EGC Responsibilities"
     body: |
       I have read the following sections of the Commonhaus Foundation Bylaws:
-      - [Project Representation](https://www.commonhaus.org/bylaws/cf-membership.md#project-representation)
-      - [Composition of the EGC](https://www.commonhaus.org/bylaws/cf-council.md#extended-governance-committee-egc)
+      - [Project Representation](https://www.commonhaus.org/bylaws/cf-membership.html#project-representation)
+      - [Composition of the EGC](https://www.commonhaus.org/bylaws/cf-council.html#extended-governance-committee-egc)
       - [Decision Making](https://www.commonhaus.org/bylaws/decision-making.html)
-      - [Matters requiring EGC approval](https://www.commonhaus.org/bylaws/cf-council.md#matters-requiring-egc-approval)
+      - [Matters requiring EGC approval](https://www.commonhaus.org/bylaws/cf-council.html#matters-requiring-egc-approval)
       - [Electronic Participation and Voting](https://www.commonhaus.org/bylaws/cf-council.html#electronic-participation-and-decision-making)
 
       As a project representative to the EGC, I agree to:
@@ -125,7 +125,7 @@ attestations:
     title: "Officer Responsibilities"
     body: |
       I have read the following sections of the Commonhaus Foundation Bylaws:
-      - [Officers](https://www.commonhaus.org/bylaws/cf-council.md#officers)
+      - [Officers](https://www.commonhaus.org/bylaws/cf-council.html#officers)
       - [Decision Making](https://www.commonhaus.org/bylaws/decision-making.html)
 
       As an officer of the Commonhaus Foundation, I agree to:
@@ -136,7 +136,7 @@ attestations:
     title: "Advisory Board Responsibilities"
     body: |
       I have read the following sections of the Commonhaus Foundation Bylaws:
-      - [Advisory Board](https://www.commonhaus.org/bylaws/cf-council.md#advisory-board)
+      - [Advisory Board](https://www.commonhaus.org/bylaws/cf-council.html#advisory-board)
       - [Decision Making](https://www.commonhaus.org/bylaws/decision-making.html)
 
       As an Advisory Board member, I agree to:
