👷 revise pdf/doc builds + triggers
- clear split between pdf/docx build and cross-repo trigger
- remove redundancies in doc creation script
- notice (content push) should happen more often than not
- linter can be constrained to md & yaml

--- a/.github/cf-automation.yml
+++ b/.github/cf-automation.yml
@@ -59,6 +59,7 @@ notice:
           - edited
           - closed
         paths:
+          - agreements/project-contribution/*
           - bylaws/*
           - policies/*
         label: ["!notice"]
@@ -95,11 +96,11 @@ voting:
     - source: CONTACTS.yaml
       repo: commonhaus/foundation
       mapping:
-        - field: project 
-          primary: 
+        - field: project
+          primary:
             data: egc
             team: commonhaus/cf-egc
-          secondary: 
+          secondary:
             data: egc-second
             team: commonhaus/cf-egc-second
   exclude_login:
