--- a/.github/workflows/voting.yaml
+++ b/.github/workflows/voting.yaml
@@ -4,10 +4,9 @@ on:
   discussion:
   discussion_comment:
 
-  pull_request:
+  pull_request_target:
+    types: [opened, edited, reopened, closed]
   issue_comment:
-
-  workflow_dispatch:
 
 permissions: {}
 
