Kroxylicious bootstrapping agreement, 2024-02-10
Signed-off-by: Keith Wall <kwall@apache.org>

--- a/CONTACTS.yaml
+++ b/CONTACTS.yaml
@@ -80,6 +80,8 @@ egc:
     login: Naros
   - project: infinispan
     login: tristantarrant
+  - project: kroxylicious
+    login: k-wall
 
 #--------------------------------------------------------------------------
 # EGC Backup/Secondary representative (appointed by project governance process)
@@ -106,6 +108,8 @@ egc-second:
     login: maxandersen
   - project: hibernate
     login: yrodiere
+  - project: kroxylicious
+    login: SamBarker
 
 #--------------------------------------------------------------------------
 # Advisory Board members (sponsor-appointed)
