Add Katia Aresti as secondary representative to Infinispan

--- a/CONTACTS.yaml
+++ b/CONTACTS.yaml
@@ -87,6 +87,8 @@ egc:
 egc-second:
   - project: jackson
     login: JooHyukKim
+  - project: infinispan
+    login: karesti
 
 #--------------------------------------------------------------------------
 # Advisory Board members (sponsor-appointed)
